verif/test/deca/syntax/invalid/class/class-simple-verif.res
src/test/deca/syntax/invalid/class/class-simple.deca:7:18: missing IDENT at '='
